@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-17T01:40:33Z",
+  "timestamp" : "2022-07-17T08:17:20Z",
   "count_outdated" : 395,
   "uniques_outdated" : 228,
-  "count" : 426,
+  "count" : 425,
   "uniques" : 245,
   "clones" : [
     {
       "timestamp": "2022-07-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
