@@ -1,3 +1,10 @@
+2022-07-17T08:17:20Z:
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 228 395 / 245 426
+* notice: next accum: outdated-unq outdated-all / unq all: 228 395 / 245 425
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-07-03]
+
 2022-07-17T01:40:33Z:
 * notice: last 14d: unq all: 4 31
 * notice: prev accum: outdated-unq outdated-all / unq all: 226 393 / 243 424
